# HaskellCourse

./: LICENSE  README.md  TrafficLight.hs  haskell-course.cabal  haskell-starter-slides.html  init.sh  todo.md
executables/: AEMain.hs  LAEMain.hs  Main.hs  UntypedLC.hs
src/HaskellCourse/: Parsing.hs  Prim.hs  State1.hs  Util.hs
src/HaskellCourse/AE/: AE.hs  AST.hs  Interp.hs  Main.hs  Parser.hs  TypeChecker.hs
src/HaskellCourse/LAE/: AST.hs  Interp.hs  LAE.hs  Parser.hs  TypeChecker.hs
src/HaskellCourse/LAEE/: AST.hs  Interp.hs  LAEE.hs  Parser.hs
src/HaskellCourse/Lang1/: AST.hs  Interp.hs
src/HaskellCourse/UntypedLC/: AST.hs  Interp.hs  Parser.hs  StrictInterp.hs  UntypedLC.hs
test/: AEProperties.hs  Main.hs  Properties.hs  UnitTests.hs
test/testFiles/UntypedLC/: test1.ulc  test2.ulc
