name:                haskell-course
version:             0.1.0.0
synopsis:            A course for teaching Haskell.
description:         This project is a repo for teaching Haskell and functional programming. 
homepage:            https://github.com/joshcough/HaskellCourse
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
category:            Course
build-type:          Simple
cabal-version:       >=1.20

source-repository head
  type: git
  location: https://github.com/joshcough/HaskellCourse.git

-- configuration for building a library
library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    HaskellCourse.Lang1.AST
    HaskellCourse.Lang1.Interp
  other-modules:
    HaskellCourse.Util
  build-depends:
    base   >= 4.6   && < 5,
    containers >= 0.5.5.1

-- configuration for an executable 
executable interpreter
  default-language: Haskell2010
  hs-source-dirs: executables
  main-is: Main.hs
  build-depends: 
    base >= 4.6 && < 5,
    haskell-course

-- configuration for Unit tests and properties
test-suite unit-tests-and-properties
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    base                       >= 4.6 && < 5,
    HUnit                      >= 1.2 && < 1.4,
    QuickCheck                 >= 2.4 && < 2.8,
    test-framework             >= 0.6 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.5,
    test-framework-quickcheck2 >= 0.2 && < 0.4,
    test-framework-th          >= 0.2 && < 0.4

