name:                haskell-course
version:             0.1.0.0
synopsis:            A course for teaching Haskell.
description:         This project is a repo for teaching Haskell and functional programming. 
homepage:            https://github.com/joshcough/HaskellCourse
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
category:            Course
build-type:          Simple
cabal-version:       >=1.20

source-repository head
  type: git
  location: https://github.com/joshcough/HaskellCourse.git

-- configuration for building a library
library
  default-language: Haskell2010
  
  hs-source-dirs: src
  
  exposed-modules:  
    HaskellCourse.AE.AE
    HaskellCourse.AE.AST
    HaskellCourse.AE.Interp
    HaskellCourse.AE.Parser

    HaskellCourse.LAE.LAE
    HaskellCourse.LAE.AST
    HaskellCourse.LAE.Interp
    HaskellCourse.LAE.Parser

    HaskellCourse.UntypedLC.UntypedLC
    HaskellCourse.UntypedLC.AST
    HaskellCourse.UntypedLC.Parser
    --HaskellCourse.UntypedLC.LazyInterp
    HaskellCourse.UntypedLC.StrictInterp

    HaskellCourse.Util

  other-modules:
    HaskellCourse.Parsing
    HaskellCourse.Prim

  build-depends:
    base                 >= 4.6       && < 5,
    bytestring           >= 0.10.4.0,
    containers           >= 0.5.5.1,
    parsers              >= 0.12.1.1,
    semigroups           >= 0.16.0.1,
    trifecta             >= 1.5.1,
    unordered-containers >= 0.2.5.1,
    utf8-string          >= 0.3.6     && < 0.4

-- configuration for an executable 
executable hc-ae
  default-language: Haskell2010
  hs-source-dirs: executables
  main-is: AEMain.hs
  build-depends: base >= 4.6 && < 5, haskell-course

executable hc-lae
  default-language: Haskell2010
  hs-source-dirs: executables
  main-is: LAEMain.hs
  build-depends: base >= 4.6 && < 5, haskell-course

executable hc-ulc
  default-language: Haskell2010
  hs-source-dirs: executables
  main-is: UntypedLC.hs
  build-depends: base >= 4.6 && < 5, haskell-course


-- configuration for Unit tests and properties
test-suite unit-tests-and-properties
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    base                       >= 4.6 && < 5,
    haskell-course,
    HUnit                      >= 1.2 && < 1.4,
    QuickCheck                 >= 2.4 && < 2.8,
    test-framework             >= 0.6 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.5,
    test-framework-quickcheck2 >= 0.2 && < 0.4,
    test-framework-th          >= 0.2 && < 0.4

